--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,36 +1,12 @@
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <p>Add new server or Blue prints!</p>
-      <label>Server Name</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerName">
-      <label>Server Content</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerContent">
-      <br>
-      <button
-      class="btn btn-primary"
-      (click)="onAddServer()"
-      >Add Server</button>
-      <button
-      class="btn btn-primary"
-      (click)="onAddBlueprint()"
-      >Add Server BluePrint!</button>
-    </div>
-  </div>
+  <app-cockpit></app-cockpit>
   <hr>
   <div class="row">
     <div class="col-xs-12">
-      <div class="panel panel-default"
-      *ngFor="let element of serverElements"
-      >
-        <div class="panel-heading">{{element.name}}</div>
-        <div class="panel-body">
-          <p>
-            <strong *ngIf="element.type === 'server'">{{element.content}}</strong>
-            <em *ngIf="element.type === 'blueprint'">{{element.content}}</em>
-          </p>
-        </div>
-      </div>
+      <app-server-element
+      *ngFor="let serverElement of serverElements"
+      [element]="serverElement"
+      ></app-server-element>
     </div>
   </div>
 </div>
