--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <app-cockpit
-  (serverCreated)="onServerAdded($event)"
-  (blueprintCreated)="onBlueprintAdded($event)"
+  (srvCreated)="onServerAdded($event)"
+  (blueCreated)="onBlueprintAdded($event)"
   ></app-cockpit>
   <hr>
   <div class="row">
