--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -2,17 +2,21 @@
   <div class="col-xs-12">
     <p>Add new server or Blue prints!</p>
     <label>Server Name</label>
-    <input type="text" class="form-control" [(ngModel)]="newServerName">
+    <input type="text" class="form-control" 
+    #serverNameInput
+    >
     <label>Server Content</label>
-    <input type="text" class="form-control" [(ngModel)]="newServerContent">
+    <input type="text" class="form-control" 
+    #serverContentInput
+    >
     <br>
     <button
     class="btn btn-primary"
-    (click)="onAddServer()"
+    (click)="onAddServer(serverNameInput,serverContentInput)"
     >Add Server</button>
     <button
     class="btn btn-primary"
-    (click)="onAddBlueprint()"
+    (click)="onAddBlueprint(serverNameInput,serverContentInput)"
     >Add Server BluePrint!</button>
   </div>
 </div>
