ng-content create hook to inject your HTML added in between the tag of components.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,12 @@
       <app-server-element
       *ngFor="let serverElement of serverElements"
       [srvElement]="serverElement"
-      ></app-server-element>
+      >
+      <p>
+        <strong *ngIf="serverElement.type === 'server'" [ngStyle]="{'color': serverElement.type === 'server'?'red':'transparent'}">{{serverElement.content}}</strong>
+        <em *ngIf="serverElement.type === 'blueprint'" [ngStyle]="{'color': serverElement.type === 'blueprint'?'blue':'transparent'}">{{serverElement.content}}</em>
+      </p>
+    </app-server-element>
     </div>
   </div>
 </div>
