--- a/src/app/server-element/server-element.component.html
+++ b/src/app/server-element/server-element.component.html
@@ -1,9 +1,6 @@
 <div class="panel panel-default">
         <div class="panel-heading">{{element.name}}</div>
         <div class="panel-body">
-          <p>
-            <strong *ngIf="element.type === 'server'" [ngStyle]="{'color': element.type === 'server'?'red':'transparent'}">{{element.content}}</strong>
-            <em *ngIf="element.type === 'blueprint'" [ngStyle]="{'color': element.type === 'blueprint'?'blue':'transparent'}">{{element.content}}</em>
-          </p>
+          <ng-content></ng-content>
         </div>
       </div>
