--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,12 @@
   (blueCreated)="onBlueprintAdded($event)"
   ></app-cockpit>
   <hr>
-  <button class="btn btn-primary" (click)="onChangeName()">Change me</button>
   <div class="row">
     <div class="col-xs-12">
+
+  <button class="btn btn-primary" (click)="onChangeName()">Change me</button>
+
+  <button class="btn btn-danger" (click)="onDestroy()">Destroy me</button>
       <app-server-element
       *ngFor="let serverElement of serverElements"
       [srvElement]="serverElement"
