learned how to use viewChild for same component view and contentChild child component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
       [srvElement]="serverElement"
       [name]="serverElement.name"
       >
-      <p>
+      <p #contentParagraph>
         <strong *ngIf="serverElement.type === 'server'" [ngStyle]="{'color': serverElement.type === 'server'?'red':'transparent'}">{{serverElement.content}}</strong>
         <em *ngIf="serverElement.type === 'blueprint'" [ngStyle]="{'color': serverElement.type === 'blueprint'?'blue':'transparent'}">{{serverElement.content}}</em>
       </p>
