created new small game to understand eventEmitter and capturing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,5 +22,11 @@
     </app-server-element>
     </div>
   </div>
+  <app-game-control (start)="onStart($event)"></app-game-control>
+  
+  <p *ngFor="let event_number of event_numbers">
+    <app-odd *ngIf="event_number.type==='odd'">{{event_number.value}}</app-odd>
+    <app-even *ngIf="event_number.type==='even'">{{event_number.value}}</app-even>
+  </p>
 </div>
 
