custom directive through Renderer2

--- a/src/app/prac/even/even.component.html
+++ b/src/app/prac/even/even.component.html
@@ -1,5 +1,5 @@
 <div class="panel panel-default">
-    <div class="panel-heading">Even number</div>
+    <div class="panel-heading" appBasicHighlighter >Even number</div>
     <div class="panel-body even">
         {{number}}
     </div>
