--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,21 @@
     </app-server-element>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-xs-12">
+        <app-new-account (accountAdded)="onAccountAdded($event)"></app-new-account>
+        <hr>
+        <app-account
+          *ngFor="let acc of accounts; let i = index"
+          [account]="acc"
+          [id]="i"
+          (statusChanged)="onStatusChanged($event)"></app-account>  
+    </div>
+  </div>
+
+
+
   <app-game-control (start)="onStart($event)"></app-game-control>
   
   <p *ngFor="let event_number of event_numbers">
