--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,13 @@
     <h3>New Application for service log</h3>
     <div class="row">
       <div class="col-xs-12">
-          <app-new-account (accountAdded)="onAccountAdded($event)"></app-new-account>
+          <app-new-account></app-new-account>
           <hr>
           <app-account
             *ngFor="let acc of accounts; let i = index"
-            [account]="acc"
             [id]="i"
-            (statusChanged)="onStatusChanged($event)"></app-account>  
+            [account]="acc"
+            (click)="onStatusChanged(i,acc)"></app-account>  
       </div>
     </div>
     <hr>
