--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,29 @@
 <div class="container">
+    <h3>Application for Services</h3>
+    <div class="row">
+      <div class="col-xs-12">
+        <h4>Active Users</h4>
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let user of active_users; let i = index" >
+            {{user.name}} | <a  (click)="setUser(i,'inactive')">Set Inactive</a>
+          </li>
+          </ul>
+      </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+          <h4>Inactive Users</h4>
+              <ul class="list-group">
+                  <li class="list-group-item" *ngFor="let user of inactive_users; let i = index" >
+                    {{user.name}} | <a  (click)="setUser(i,'active')">Set Active</a>
+                  </li>
+                  </ul>
+        </div>
+      </div>
+    <hr>
+</div>
+<div class="container">
+  
     <h3>New Application for service log</h3>
     <div class="row">
       <div class="col-xs-12">
