implementation of user server

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,10 @@
                     {{user.name}} | <a  (click)="setUser(i,'active')">Set Active</a>
                   </li>
                   </ul>
+                  <hr>
+                  <p>Total operations: {{operationCount}}</p>
         </div>
+        
       </div>
     <hr>
 </div>
